--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "bootstrap": "^5.1.3",
     "firebase": "^9.8.3",
     "firebase-admin": "^10.2.0",
     "firebaseui": "^6.0.1",
