--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "react": "18.1.0",
     "react-bootstrap": "^2.4.0",
     "react-dom": "18.1.0",
-    "react-firebase-hooks": "^5.0.3"
+    "react-firebase-hooks": "^5.0.3",
+    "react-select": "^5.3.2"
   },
   "devDependencies": {
     "eslint": "8.16.0",
