--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "react-bootstrap": "^2.4.0",
     "react-dom": "18.1.0",
     "react-firebase-hooks": "^5.0.3",
-    "react-select": "^5.3.2"
+    "react-select": "^5.3.2",
+    "uniqid": "^5.4.0"
   },
   "devDependencies": {
     "eslint": "8.16.0",
