--- a/package.json
+++ b/package.json
@@ -23,7 +23,11 @@
     "uniqid": "^5.4.0"
   },
   "devDependencies": {
+    "autoprefixer": "^10.4.7",
     "eslint": "8.16.0",
-    "eslint-config-next": "12.1.6"
+    "eslint-config-next": "^0.2.4",
+    "postcss": "^8.4.14",
+    "tailwindcss": "^2.2.19",
+    "typescript": "^4.7.4"
   }
 }
