--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "uniqid": "^5.4.0"
   },
   "devDependencies": {
-    "autoprefixer": "^10.4.7",
+    "autoprefixer": "10.4.5",
     "eslint": "8.16.0",
     "eslint-config-next": "^0.2.4",
     "postcss": "^8.4.14",
