--- a/package.json
+++ b/package.json
@@ -25,6 +25,9 @@
     "uniqid": "^5.4.0"
   },
   "devDependencies": {
+    "@types/node": "^18.6.3",
+    "@types/react": "^18.0.15",
+    "@types/uniqid": "^5.3.2",
     "autoprefixer": "10.4.5",
     "eslint": "8.16.0",
     "eslint-config-next": "^0.2.4",
