--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-dom": "18.1.0",
     "react-firebase-hooks": "^5.0.3",
     "react-select": "^5.3.2",
+    "react-toastify": "^9.0.8",
     "uniqid": "^5.4.0"
   },
   "devDependencies": {
